ingress/apple_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: apple-svc
spec:
  selector:
    app: apple
  ports:
    - port: 5678
