ingress/banana_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: banana-svc
spec:
  selector:
    app: banana
  ports:
    - port: 5678
