ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - http:
      paths:
        - path: /apple
          backend: 
            serviceName: apple-svc
            servicePort: 5678
        - path: /banana
          backend:
            serviceName: banana-svc
            servicePort: 5678
